fixes to chapter 1

--- a/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -64,7 +64,7 @@
     "- how to perform arithmetic operations on matrices and vectors\n",
     "- how to represent linear system of equations using matrices and vectors\n",
     "\n",
-    "## What's new from Math 1410\n",
+    "## What's New from Math 1410\n",
     "A lot of this page is reviewing mechanics that you've arleady seen in Math 1410.  If you feel like you remember all of this material well and just want to skip to the new stuff, here are some shortcuts:\n",
     "- Matrix-vector multiplication as a [linear combination of columns](#mat-vec-new)\n",
     "- Matrix-matrix multiplication as [batch matrix-vector multiplication](#batch)\n",
@@ -110,7 +110,7 @@
     "```\n",
     "[^cols]: It is not a coincidence that $n$ is also the letter that we used for the number of unknowns in a [linear equation](./021-linsys-gauss.ipynb#lin-eq)! \n",
     "\n",
-    "### Constructing Matrices and Vectors in NumPY\n",
+    "#### Python Break! Constructing Matrices and Vectors in NumPY\n",
     "[NumPy](https://numpy.org/) is a standard scientific computing module in the Python programming language, and is widely used in the engineering, data science, and financial industries.  Throughout these notes, we will provide you with NumPy code snippets that implement the mathematical concepts we introduce.  The purpose of these are twofold.  First, you will have coding exercises on the problem sets, and these snippets give you examples of the syntax needed to implement concepts from class.  Second, they let you see the math \"come to life.\"  While we are starting with some pretty basic ideas now, we'll soon be able to do some really interesting things with a few lines of code.  A great way to get intuition about mathematical objects is to paly with them in code.  You can do this by clicking the button below[^button], which will launch an interactive version of this notebook where you can modify code to see what changes in the output.  You are _strongly encouraged_ to do this!\n",
     "\n",
     "NumPy uses data structures called [NumPy Arrays](https://numpy.org/doc/stable/reference/generated/numpy.array.html) to represent matrices and vectors.  Accessing elements of a matrix is done using zero indexing: see this [page](https://numpy.org/doc/stable/user/basics.indexing.html) for examples.\n",
@@ -222,6 +222,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cd0ed6b-6113-4ea9-a599-d7b0fd86fd3e",
+   "metadata": {},
+   "source": [
+    "#### Python Break!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "96992cbb",
@@ -268,7 +276,7 @@
     "NumPy lets you add (and multiply) incompatibly sized matrices/vectors via [broadcasting](https://numpy.org/doc/stable/user/basics.broadcasting.html).  This can be a very convenient tool to write simpler, cleaner code, if used properly, but it can also lead to very difficult to identify bugs.  For this class, you shouldn't need to use broadcasting, so always be sure to check the dimensions of arrays when adding or multiplying them.\n",
     "```\n",
     "\n",
-    "### Scalar multiplication\n",
+    "### Scalar Multiplication\n",
     "A _scalar_ is a fancy name for an ordinary number.  For now, we restrict ourselves to scalars, vectors, and matrices with _real_ entries, but we will eventually extend these ideas to complex numbers and matrices with complex entries.  Although technically not the same thing, we will treat the $1 \\times 1$ matrix $[c]$ and the scalar $c \\in \\R$ as a scalar,[^notation] that is to say as an ordinary number, so we will drop the brackets. _Scalar multiplication_ takes a scalar $c$ and an $m \\times n$ matrix $A$ an computes the $m \\times n$ matrix $B = cA$ by multiplying each entry of $A$ by $c$.  For example:\n",
     "$$\n",
     "c = 3, \\quad A = \\bm 1 & 2 \\\\ -1 & 0 \\em, \\quad cA = 3\\bm 1 & 2 \\\\ -1 & 0 \\em=\\bm 3 & 6 \\\\ -3 & 0\\em.\n",
@@ -310,6 +318,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d2969e6-1d93-484e-9620-e3352156e7aa",
+   "metadata": {},
+   "source": [
+    "#### Python Break!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "f99a5225",
@@ -339,7 +355,7 @@
    "id": "866251b7-96fb-4b8c-b989-a756a17df879",
    "metadata": {},
    "source": [
-    "## Matrix multiplication warmup\n",
+    "## Matrix Multiplication Warmup\n",
     "\n",
     "We first look at multiplying a row vector with a column vector and use this as the base to multiply two matrices. Let $\\vv a$ be a $1 \\times n$ row vector and $\\vv x$ be a $n \\times 1$ column vector. The product $\\vv a \\vv x$ is defined as\n",
     "\n",
@@ -369,6 +385,14 @@
     "b. $\\bm 1 & \\sqrt 2 \\em \\bm 2 \\\\ \\sqrt 2 \\em = 1*2 + \\sqrt 2 * \\sqrt 2 = 4$ \n",
     "``` \n",
     "````\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c804a2db-8a0e-4074-be7d-64c95fbb18c5",
+   "metadata": {},
+   "source": [
+    "#### Python Break!"
    ]
   },
   {
@@ -402,7 +426,7 @@
    "id": "1b416bf2-d8eb-4391-a41f-22ce1c10ecb5",
    "metadata": {},
    "source": [
-    "## Matrix-Matrix multiplication\n",
+    "## Matrix-Matrix Multiplication\n",
     "\n",
     "We can multiply two matrices $A, B$ if and only if they have compatible sizes. For example, to compute the product $C = AB$, $A$ must have the same number of columns as the number of rows in $B$. If $A$ is an $m \\times n$ matrix and $B$ is an $n \\times p$ matrix, then $C = AB$ is an $m \\times p$ matrix, where each element is defined by\n",
     "$$\n",
@@ -410,7 +434,7 @@
     "$$\n",
     "The $(i, j)^{th}$ entry of $C$ is the vector product of the $i^{th}$ row of $A$ and $j^{th}$ column of $B$. \n",
     "\n",
-    "### Matrix-vector multiplication\n",
+    "### Matrix-Vector Multiplication\n",
     "An important special case of matrix-matrix multiplication is _matrix-vector products_. Let $A$ be an $m \\times n$ matrix and $\\vv x$ be an $n \\times 1$ column vector. Then, the matrix-vector product $\\vv b = A \\vv x$ is an $m\\times 1$ column vector, where the entries of $\\vv b$ are\n",
     "$$\n",
     "b_{i} = \\sum_{k=1}^na_{ik}x_{i} \n",
@@ -485,6 +509,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c00e6bb7-e40d-42c6-967a-f36005a28c6a",
+   "metadata": {},
+   "source": [
+    "#### Python Break!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
@@ -538,7 +570,7 @@
    "id": "877c5599-0fb8-402b-be3a-1d992e7251b3",
    "metadata": {},
    "source": [
-    "## Special matrices\n",
+    "## Special Matrices\n",
     "\n",
     "```{prf:definition}\n",
     ":label: identity\n",
@@ -567,7 +599,7 @@
    "id": "0380915e-ae35-4fca-b073-2373c14b0e89",
    "metadata": {},
    "source": [
-    "#### Built in NumPy functions\n",
+    "#### Python Break! Built in NumPy functions\n",
     "NumPy has built in functions for constructing special matrices such as the [identity]() and all [zeros](https://numpy.org/doc/stable/reference/generated/numpy.zeros.html) matrix.  Other special matrices include the all [ones](https://numpy.org/doc/stable/reference/generated/numpy.ones.html) matrix and [Vandermonde](https://numpy.org/doc/stable/reference/generated/numpy.vander.html) matrices (which you'll see in your homework set)."
    ]
   },
@@ -627,7 +659,7 @@
    "id": "76cd21ab-7c7f-46f4-8661-2f785447a958",
    "metadata": {},
    "source": [
-    "## Matrix arithmetic rules\n",
+    "## Matrix Arithmetic Rules\n",
     "Summarized below are the rules for how you can combine matrix addition, scalar multiplication, and matrix-matrix multiplication.  These are properties you should have seen in Math 1410, so we will not go over them in detail, but it is important to keep these in mind as we progress through the semester.  The big thing to remember is that matrix-matrix multiplication comes with more rules than traditional scalar multiplication.\n",
     "\n",
     "```{image} ../figures/02-matrix_arithmetic.png\n",
@@ -790,14 +822,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3493d91-82a1-4820-8cd8-a137bc9900e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
