--- a/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -96,6 +96,7 @@
     "For the time being, we will concentrate our efforst on linear systems that have the same number, $n$, of equations as unknowns.  The associated coefficient matrix $A$ is square of size $n \\times n$, and the corresponding augmented matrix $M = [ A \\, | \\, \\vv b]$ then has size $n \\times (n+1)$.\n",
     "\n",
     "We start with a simple observation connecting [Linear System Operation \\#1](./021-linsys-gauss.ipynb#linop1) to its equivalent matrix operation\n",
+    "(rowop1)=\n",
     "```{prf:observation} Elementary Row Operation \\#1\n",
     ":label: rowop1\n",
     "Adding a scalar multiple of one row of the augmented matrix to another row is the equivalent of adding a multiple of one equation to another in the system of linear equations it defines.  As such, this does not change the solution set and leads to an equivalent augmented matrix.\n",
@@ -156,6 +157,7 @@
     ":::\n",
     "Here we use what are called _in place updates_, meaning that the same letter $M$ (with entries $m_{ij}$) denotes the current augmented matrix at each stage in the computation.  We initialize with $M=[A \\, | \\, \\vv b]$, and output (assuming $A$ is regular) the upper triangular equivalent augmented matrix $M = [U \\, | \\, \\vv c]$, where $U$ is the upper triangular matrix with diagonal entries the pivots, and $\\vv c$ is the resulting vector of the right-hand sides of the triangular system $U\\vv x = \\vv c$.  \n",
     "\n",
+    "#### Python Break!\n",
     "Here's what this looks like implemented as a function in NumPy.  You should be able to map the code below to the pseudo-code above."
    ]
   },
@@ -473,7 +475,7 @@
    "id": "c06384a9-2a26-4a0e-a471-f775acb51176",
    "metadata": {},
    "source": [
-    "## Solving big systems of linear equations\n",
+    "## Solving Big Systems of Linear Equations\n",
     "The code that we wrote above works equally well when we have 1000 equations in 1000 unknowns (or more!).  The code below generates a random `A` and `b` of size 1000 x 1000 and 1000 x 1, respectively, and solves for a 1000 x 1 solution `x` satisfying `A @ x = b`.  Compare how long our code takes to solve this problem and the built in function from NumPy [`np.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html).\n",
     "\n",
     "If you want to play around with this, launch the interactive notebook and see how big of a system you can solve before it takes too long or you run out of memory!"
