--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -72,7 +72,7 @@
    "id": "a2378cbe-20bd-404d-baa2-d111b1877e72",
    "metadata": {},
    "source": [
-    "### We like triangular matrices\n",
+    "## We Like Triangular Matrices!\n",
     "A theme we've exploited so far is that if we have an upper triangular system of equations, i.e., if $U\\vv x = \\vv c$ for $U$ and upper triangular matrix, then finding a solution $\\vv x$ is easy via back substitution.  Hopefully you believe that a _lower_ triangular system of equations of the form $L\\vv x = \\vv c$ for $L$ a lower triangular matrix is also easy to solve via forward substitution.  This section starts with the following question:\n",
     "\n",
     "> Is it easy to solve a system of linear equations of the form $LU \\vv x = \\vv b$, where $L$ is a lower triangular matrix and $U$ is an upper triangular matrix?\n",
@@ -312,7 +312,7 @@
    "id": "69666045-2f65-4b4b-b0e7-fb1aee58ea0d",
    "metadata": {},
    "source": [
-    "### Inverse Elementary Matrix\n",
+    "### Inverse Elementary Matrices\n",
     "Our work so far shows that we can find a matrix $E$ such that $EA = U$, for $U$ upper triangular.  This is progress, but we still haven't reached our goal of decomposing $A$ into a product $LU$ of a lower and an upper triangular matrix.  Our approach will be to look at the matrix equation $EA=U$ and find a matrix $L$ that \"undoes\" the action of left-multiplyting by $E$. \n",
     "\n",
     "Let's start by focussing on how to undo the action of an elementary matrix using its corresponding _inverse elementary matrix_. Since elmentary matrix multiplication implements simple row operations, we can intuitively figure out how to undo them.  For example, to undo the action of $E_1$ (subtract twice equation 1 from equation 2), we add twice equation 1 to equation 2. The corresponding matrix is \n",
@@ -417,7 +417,7 @@
    "id": "04f928f9-df74-4bbb-8e63-2a53d2a69b0c",
    "metadata": {},
    "source": [
-    "## Regular matrix\n",
+    "### Regular Matrix\n",
     "Using the $LU$ factorization explained in this page, we can _finally_ give a formal definition of a _regular_ matrix. \n",
     "\n",
     "```{prf:definition} Regular matrix\n",
@@ -532,7 +532,7 @@
    "id": "734af8ca-1d0d-4ae9-9347-27be47bff93f",
    "metadata": {},
    "source": [
-    "## Are we done?\n",
+    "## Are We Done?\n",
     "Not quite! We've assumed throughout that our matrix $A$ is _regular_, which we now somewhat circularly defined as being the class of matrices for which the above $LU$-facotrization works.  But there are very simple (and easily solvable!) systems of equations for which $A$ is _not regular_.  For example, if $A$ is lower triangular, the above algorithm fails!  We'll see a very simple fix next that let's us handle a much more general class of systems with just a small tweak."
    ]
   },
