--- a/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd6aeff-4ad9-42b7-9fb4-a82ada3e07b6",
+   "id": "b05083d8-ef6c-469a-9cf5-388ed048fa0b",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -77,11 +77,11 @@
     "tags": []
    },
    "source": [
-    "## Interchanging rows\n",
+    "## Interchanging Rows\n",
     "\n",
-    "The method of Gaussian Elimination works only if the matrices are regular[^regular]. However, not every matrix is regular as given in the example below.\n",
+    "The method of Gaussian Elimination works only if the matrices are regular. However, not every matrix is regular as given in the example below.\n",
     "\n",
-    "[^regular]: We'll call a square matrix $A$ _regular_ if Gaussian Elimination successfully reduces $A$ to the upper triangular form $U$ with all nonzero pivots on the diagonal.  If this fails to happen, i.e., if a pivot appearing on the diagonal is zero, then the matrix is not regular.\n",
+    "<!-- [^regular]: We'll call a square matrix $A$ _regular_ if Gaussian Elimination successfully reduces $A$ to the upper triangular form $U$ with all nonzero pivots on the diagonal.  If this fails to happen, i.e., if a pivot appearing on the diagonal is zero, then the matrix is not regular. -->\n",
     "\n",
     "\\begin{eqnarray}\n",
     "\\label{non_regular}\n",
@@ -97,7 +97,7 @@
     "\\left[ \\begin{array}{ccc|c} 0 & 2 & 1 & 2\\\\ 2& 6 & 1 & 7\\\\ 1 & 1 & 4 & 3 \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
-    "In the above example, the entry $(1,1)$ is 0, which is the first diagonal element, but cannot serve as a pivot. The \"problem\" is because $x$ does not appear in the first equation, but this is actually a bonus because we already have an equation that has only two variables in it. Hence, we need to eliminate $x$ from only one of the other two equations. Let us interchange the first two rows of [](#augm):\n",
+    "In the above example, the entry $(1,1)$ is 0, which is the first diagonal element, but cannot serve as a pivot. The \"problem\" is because $x$ does not appear in the first equation, but this is actually a good thing because we already have an equation that has only two variables in it. Hence, we need to eliminate $x$ from only one of the other two equations. Let us interchange the first two rows of [](#augm):\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{augm_swap}\n",
@@ -112,36 +112,50 @@
     "\\left[ \\begin{array}{ccc|c}  2& 6 & 1 & 7\\\\ 0 & 2 & 1 & 2\\\\ 0 & 0 & \\frac{9}{2} & \\frac{3}{2} \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
-    "The pivots are $2, 2, \\frac{9}{2}$ and solving via back substitution yields the solution $x=\\frac{5}{6}, y = \\frac{5}{6}, z = \\frac{1}{3}$. We observe the swapping operation as another elementary row operation, in addition to [type 1](./023-linsys-gauuss.ipynb#rowop1).\n",
+    "The pivots are $2, 2, \\frac{9}{2}$ and solving via back substitution yields the solution $x=\\frac{5}{6}, y = \\frac{5}{6}, z = \\frac{1}{3}$. \n",
     "\n",
+    "This row swapping operation is pretty useful, and so we'll make it another elementary row operation, in addition to the [type 1 operation](./023-linsys-gauss.ipynb#rowop1) of adding rows of a matrix together that we've been relying on so far.\n",
+    "\n",
+    "(rowop2)=\n",
     "```{prf:observation} Elementary Row Operation \\#2\n",
     ":label: rowop2\n",
     "Interchanging two rows of the augmented matrix $M$ is the equivalent of swapping two equations in the system of linear equations it defines. As such, this does not change the solution set and leads to an equivalent augmented matrix.\n",
-    "```\n",
-    "\n",
-    "So far, we have worked with matrices than can be reduced to upper triangular form with all non-zero diagonals, which is formally defined below.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0046940-e205-406f-a3d1-94a0bb0cddcb",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "Square matrices $A$ that can be reduced to upper triangular form with nonzeros along the diagonal via Gaussian Elimination with pivoting play a distingished role in linear algebra.  As we'll see shortly, when such matrices are used to define a system of linear equations $A\\vv x = \\vv b$, we know that there will be a unique solution for _any choice_ of right hand side $\\vv b$.  Because these kinds of matrices are so important, we'll give them a name and call them _nonsingular_.  Why we call them this will become clearer later in the course, but for now, this will just be our name for \"nice\" matrices $A$ as described below.\n",
     "\n",
     "```{prf:definition} Nonsingular\n",
     ":label: nonsingular\n",
-    "A square matrix is called _nonsingular_ if it can be reduced to upper triangular form with all non-zero elements on the diagonal — the pivots — by elementary row operations of types [1](./023-linsys-gauuss.ipynb#rowop1) and [2](#rowop2).\n",
+    "A square matrix is called _nonsingular_ if it can be reduced to upper triangular form with all non-zero elements on the diagonal — the pivots — by elementary row operations of types [1](./023-linsys-gauss.ipynb#rowop1) and [2](#rowop2).\n",
     "```\n",
     "\n",
     "In contrast, a singular square matrix cannot be reduced to such upper triangular form\n",
     "by such row operations, because at some stage in the elimination procedure the diagonal\n",
-    "entry and all the entries below it are zero. \n",
+    "pivot entry and all of the entries below it are zero. \n",
     "\n",
     "```{warning}\n",
     ":label: nonsingular_regular\n",
     "Every regular matrix is nonsingular, but, as we just saw, not every nonsingular matrix is regular.\n",
     "```\n",
     "\n",
+    "We summarize the discussion about unique solutions of systems of equations for nonsingular $A$ in the theorem below.\n",
     "```{prf:theorem} Uniqueness of solution\n",
     ":label: uniqueness\n",
     "A linear system $A \\textbf{x} = \\textbf{b}$ has a unique solution for every choice of right-hand side $b$ if and only if its coeﬃcient matrix $A$ is square and [nonsingular](#nonsingular).\n",
     "```\n",
-    "We are able to prove the “if” part of this theorem, since nonsingularity implies reduction\n",
-    "to an equivalent upper triangular form that has the same solutions as the original system.\n",
-    "The unique solution to the system is then found by back substitution. The “only if” part will be proved later."
+    "We are able to prove the “if” part of this theorem, since we know that when $A$ is nonsingular, we know that Gaussian Elimination with pivoting succeeds, meaning that the solution exists and is unique. We'll come back to prove the “only if” part later."
    ]
   },
   {
@@ -149,9 +163,11 @@
    "id": "dfebd67e-0243-4689-b5a6-bc60b3414c21",
    "metadata": {},
    "source": [
-    "## Small Pivots cause numerical issues\n",
+    "## Small Pivots Cause Numerical Issues\n",
     "\n",
-    "Consider the example\n",
+    "It's important to remember then when linear algebra is applied in engineering, data science, economics, and scientific domains, it is done so using computers.  Computers store data using bits (0s and 1s), and as such have _limited precision_.  This means that computers have to eventually round off numbers, because they can't keep an infinite number of decimal points.  This matters because when the numbers you are working with span a very large range (i.e., some numbers are _very big_ and others are _very small_), then even very small rounding errors introduced by the limits of your computer can cause significant errors in your solutions.  Here we'll look at a simple example of such _numerical ill-conditionning_, and see that by being cognizant of these issues, we can find a work around.\n",
+    "\n",
+    "We'll look at the simple system of two equations in two unknowns:\n",
     "\n",
     "\\begin{eqnarray}\n",
     "\\label{small_pivot}\n",
@@ -159,29 +175,26 @@
     "x+0.6y & = 22,\n",
     "\\end{eqnarray}\n",
     "\n",
-    "where, the exact solution is $x=10, y=20$ (verify for yourself). Let us assume we have a calculator that only retains three digits. The actual augmented matrix is given below after making it upper triangular.\n",
+    "where, the exact solution is $x=10, y=20$ (you can check this). Now let's assume that we have only have a very primitive computer for solving this system of equations that only retains three digits for any number we store in it.  Of course, modern computers have much higher, but still finite, capacity.  We can modify the exmaple below to produce similar issues on modern computers. \n",
+    "\n",
+    "The actual augmented matrix is given below after making it upper triangular.\n",
     "\n",
     "\\begin{equation} \n",
     "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 1 & .6 & 22 \\end{array}\\right] \\leftrightarrow \n",
     "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 0 & -159.4 & -3188 \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
-    "Since the calculator only retains three digits, the matrix computed by the calculator is\n",
+    "Since the calculator only retains three digits, the matrix computed by our primitive computer is instead\n",
     "\\begin{equation} \n",
     "\\label{small_pivot_augm} \n",
     "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 0 & -159 & -319 \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
-    "Solving by back substitution using [](#small_pivot_augm) is $y = \\frac{-3190}{159} \\approx 20.1 \\Rightarrow x \\approx -10$. Hence, a small error in $y$, i.e,  0.1, produces a large error in $x$! The problem is because of the small pivot $0.01$ at $(1,1)$. The small error in $y$ is scaled up when evaluating the first equation, where we have to divide the exression by the small pivot $0.01$. If we interchanged the rows so that the pivot is $1$ and proceed from there via Gauss Elimination, the approximate solution is ${y \\approx 20.1, x \\approx 9.9}$.\n",
+    "If we use back substitution with the rounded augmented matrix [](#small_pivot_augm) to solve the system by, we get first get $y = \\frac{-3190}{159} \\approx 20.1$.  Well that's not too bad, we're only off by 0.1 in $y$.  But, if we proceed to solve for $x$ using this value of $y$, we get  $x \\approx -10$! This is a big problem! A small error in $y$, i.e,  0.1, produced a huge error in $x$! The problem is because of the small pivot $0.01$ at $(1,1)$. The small error in $y$ is scaled up when evaluating the first equation, where we have to divide the exression by the small pivot $0.01$. If we interchanged the rows so that the pivot is $1$ and proceed from there via Gaussian Elimination, the approximate solution is ${y \\approx 20.1, x \\approx 9.9}$, which is much more reasonable.\n",
     "\n",
     "```{tip}\n",
     ":label: interchange_small_pivot\n",
     "Small pivots cause issues in numerical computations. Use row interchanges to avoid small pivots.\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    ":label: finite_digits\n",
-    "Computers have much higher capacity to retain digits, but still finite. Similar numerical issues arise in computers as well. \n",
     "```"
    ]
   },
@@ -192,7 +205,7 @@
    "source": [
     "## Permutation matrices\n",
     "\n",
-    "Similar to how [type 1 operations](./023-linsys-gauuss.ipynb#rowop1) are represented using [elementary matrices](./023a-linsys-LU.ipynb#elementary), we can represent [type 2 operations](rowop2) using _permutation matrices_. \n",
+    "Similar to how [type 1 operations](./023-linsys-gauss.ipynb#rowop1) are represented using [elementary matrices](./023a-linsys-LU.ipynb#elementary), we can represent [type 2 operations](rowop2) using _permutation matrices_. \n",
     "\n",
     "```{prf:definition} Permutation matrices\n",
     ":label: perm_matrix\n",
@@ -227,7 +240,38 @@
     "1. If $P_1, P_2$ are permutation matrices, then their products $P_1P_2, P_2P_1$ are also permutation matrices.\n",
     "2. In general, permutation matrices do not commute $P_1P_2 \\neq P_2P_1$, since the order of swapping matters.\n",
     "3. If $P_1$ is a permutation matrix that swaps exactly one row with another, then $P_1P_1 = I$, because the inverse operation of interchanging two rows is the same original operation. This is **not true** for general permutation matrices that encode multiple swaps. \n",
-    ":::"
+    ":::\n",
+    "\n",
+    "#### Python Break!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc85b0d4-9ec3-401c-a133-2cb703c2410c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5, 6],\n",
+       "       [1, 2, 3],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "P = np.array([[0, 1, 0], [1, 0, 0], [0, 0, 1]])\n",
+    "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "#Swap rows 1 and 2 of A\n",
+    "P @ A"
    ]
   },
   {
@@ -237,7 +281,7 @@
    "source": [
     "## Permuted LU-factorization\n",
     "\n",
-    "From [](#nonsingular), every nonsingular matrix $A$ can be reduced to upper triangular form using [type 1 operations](./023-linsys-gauuss.ipynb#rowop1) and [type 2 operations](rowop2). If we perform all the permutations first using a permutation matrix $P$, then we obtain a [regular matrix](./023a-linsys-LU.ipynb#regular_matrix) $PA$ that admits an $LU$ factorization. Hence we can define the _permuted LU factorization_ of a nonsingular matrix $A$ as\n",
+    "From [](#nonsingular), every nonsingular matrix $A$ can be reduced to upper triangular form using [type 1 operations](./023-linsys-gauss.ipynb#rowop1) and [type 2 operations](#rowop2). If we perform all the permutations first using a permutation matrix $P$, then we obtain a [regular matrix](./023a-linsys-LU.ipynb#regular_matrix) $PA$ that admits an $LU$ factorization. Hence we can define the _permuted LU factorization_ of a nonsingular matrix $A$ as\n",
     "\\begin{equation} \n",
     "\\label{perm_LU} \n",
     "PA = LU\n",
@@ -428,8 +472,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e62329db-27f2-400a-82e3-e7bb34f6a2f2",
+   "metadata": {},
+   "source": [
+    "#### Python Break!\n",
+    "Implementing the algorithms you learn in this class from scratch in NumPy is a great way to both gain a deeper understanding of the math and to practice your coding skills.  However, when applying these ideas in real word situations, it is usually better to use built-in functions: these typically have 100s, if not 1000s, of engineering hours behind them, and have been optimized for reliability, performance, and scalability.  In the code snippet below, we use the standard scientific computing package [SciPy](https://scipy.org/)'s built in `lu` implementation for the [LU-factorization (with pivots)](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu.html).  Note that this implementation is slightly different than the one described in our notes, and instead computes $P, L, U$ such that $A = PLU$.  By the end of the next section on matrix inverses, you'll know how to relate this expression to the one we described above."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "567468ed-5e61-4134-8e8d-33617206a7e5",
    "metadata": {},
    "outputs": [
@@ -448,7 +501,11 @@
       "U: \n",
       " [[2.  6.  1. ]\n",
       " [0.  2.  1. ]\n",
-      " [0.  0.  4.5]]\n"
+      " [0.  0.  4.5]]\n",
+      "A - P L U =\n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
      ]
     }
    ],
@@ -462,7 +519,33 @@
     "              [2, 6, 1],\n",
     "              [1, 1, 4]])\n",
     "P, L, U = lu(A)\n",
-    "print(\"P: \\n\", P, \"\\nL: \\n\", L, \"\\nU: \\n\", U)"
+    "print(\"P: \\n\", P, \"\\nL: \\n\", L, \"\\nU: \\n\", U)\n",
+    "print(f'A - P L U =\\n {A - P @ L @ U}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6222fe8f-50e4-437b-8831-a45119487043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$max|(A - P L U)_ij| =\n",
+      " 1.461053500406706e-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's try a bigger example!  How big can you make n before it takes too long to solve?\n",
+    "\n",
+    "n = 2000\n",
+    "A = np.random.randn(n,n)\n",
+    "\n",
+    "P, L, U = lu(A)\n",
+    "print(f'$max|(A - P L U)_ij| =\\n {np.max(np.abs(A - P @ L @ U))}')"
    ]
   },
   {
@@ -472,14 +555,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14add8ac-bb33-4595-ac4a-38289ae1ed04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
