--- a/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -61,9 +61,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- row echelon form of matrices\n",
-    "- Rank of a matrix\n",
-    "- solving linear systems using row echelon form"
+    "- how to put a matrix in to row echelon form\n",
+    "- compute the rank of a matrix\n",
+    "- how to solve general linear systems using row echelon form"
    ]
   },
   {
@@ -77,11 +77,13 @@
     "tags": []
    },
    "source": [
-    "## Row echelon form\n",
+    "## Row Echelon Form\n",
     "\n",
-    "So far we have discussed techniques to solve only equations that have nonsingular coefficient matrices, since they always have a unique solution. Now, we move towards general systems that have $m$ equations and $n$ unknowns, including non-square ($m \\neq n$) and singular coefficient matrices. We first define a generalized version of the upper triangular matrix as the _row echelon form_ of a matrix. \n",
+    "So far we have discussed techniques for solving \"nice\" linear systems defined by nonsingular coefficient matrices: these are \"nice\" since they always have a unique solution. Now, we move towards more general systems that have $m$ equations and $n$ unknowns, including non-square ($m \\neq n$) and singular coefficient matrices. \n",
     "\n",
-    ":::{prf:definition} Row echelon form\n",
+    "The good news is that we already have the tools that we need to solve the general case, but we need to make some small tweaks to accomodate this more general setting.  We first define a generalization of upper triangular matrices that take a \"stair case form\", called the _row echelon form_ of a matrix. \n",
+    "\n",
+    "```{prf:definition} Row echelon form\n",
     ":label: row_echelon\n",
     "A $m \\times n$ matrix $U$ is said to be in _row echelon form_ if it has the following \"staircase\" structure:\n",
     "\n",
@@ -91,8 +93,9 @@
     ":align: center\n",
     ":::\n",
     "\n",
-    "The entries $\\circledast$ are the _pivots_ that must be nonzero. The ﬁrst $r$ rows of $U$ each contain exactly one pivot, but not all columns are required to include a pivot entry. The entries below the “staircase”, indicated by the solid line, are all zero, while the non-pivot\n",
-    "entries above the staircase, indicated by $*$, can be anything. The last $m − r$ rows are all zeros.\n",
+    "The entries $\\circledast$ are the _pivots_, and must be nonzero. The ﬁrst $r$ rows of $U$ each contain exactly one pivot, but not all columns are required to include a pivot entry. The entries below the “staircase”, indicated by the solid line, are all zero, while the non-pivot\n",
+    "entries above the staircase, indicated by $*$, can be anything. The last $m − r$ rows are all zeros, and have no pivots.\n",
+    "```\n",
     "\n",
     "An example of a matrix in row echelon form is\n",
     "\n",
@@ -105,7 +108,7 @@
     "\\end{bmatrix},\n",
     "\\end{equation}\n",
     "\n",
-    "where $r=3, m=4$ and the pivots are in $\\textbf{bold}$."
+    "where $r=3, m=4$ and the pivots 3, -1, and 2 are in $\\textbf{bold}$."
    ]
   },
   {
@@ -124,44 +127,44 @@
     "0 & 0 & 0 & 0 & 0\n",
     "\\end{bmatrix},\n",
     "\\end{equation}\n",
-    "where the first two columns are all zeros. The matrix in [](#rare_row_echelon) corresponds to a linear system where the first two variables do not appear in any of the equations. Such systems almost never happen in real applications.\n",
+    "where the first two columns are all zeros. The matrix in [](#rare_row_echelon) corresponds to a linear system where the first two variables do not appear in any of the equations. Such systems almost never happen in real applications, so we won't worry about this case.\n",
     "```\n",
     "\n",
     "```{prf:theorem}\n",
-    "Every matrix can be reduced to row echelon form by a sequence of row operations ([scaling and adding](./023-linsys-gauuss.ipynb#rowop1), [swapping](./024-linsys-perms.ipynb#rowop2)).\n",
+    "Every matrix can be reduced to row echelon form by a sequence of [row addition](./023-linsys-gauss.ipynb#rowop1) and [row swapping](./024-linsys-perms.ipynb#rowop2) operations.\n",
     "```\n",
     "\n",
-    "```{note}Matrix notation\n",
     "If $A$ is an $m \\times n$ matrix, then we can find an $m \\times m$ permutation matrix $P$ and an $m \\times m$ lower triangular matrix $L$ such that \n",
     "$$\n",
     "PA = LU,\n",
     "$$\n",
-    "where $U$ is an $m \\times n$ matrix in row echelon form. This is a generalized version of the permuted LU decomposition. \n",
-    "```\n",
+    "where $U$ is an $m \\times n$ matrix in row echelon form. This fact follows from an analogous development of the LU-factorization using Gaussian Elimination, with some slight modifications for dealing with columns that do not have a pivot.  We illustrate the procedure with an example which makes clear when things deviate from our previous approach.\n",
     "\n",
-    "For example, consider the linear system with the augmented matrix\n",
+    "\n",
+    "Consider the linear system with the augmented matrix\n",
     "\\begin{equation}\n",
     "\\label{no_pivot_sys}\n",
-    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 2 & 6 & 1 & 4 & 3 & b \\\\ -1 & -3 & -3 & 3 & 1 & c \\\\ 3 & 9 & 8 & 7 & 2 & d\\end{array}\\right],\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 2 & 6 & 1 & 4 & 3 & b \\\\ -1 & -3 & -3 & 3 & 1 & c \\\\ 3 & 9 & 8 & -7 & 2 & d\\end{array}\\right],\n",
     "\\end{equation}\n",
-    "where $\\textbf{b} = \\begin{bmatrix} a \\\\ b \\\\ c \\\\ d\\end{bmatrix}$ is a generic vector. The $(1,1)$ entry is a pivot. We use elementary row operations to make the entries below the pivot to be zero.\n",
+    "where $\\textbf{b} = \\begin{bmatrix} a \\\\ b \\\\ c \\\\ d\\end{bmatrix}$ is a _generic right hand side_ vector that we use to get a better understanding of the solution properties of this linear system. The $(1,1)$ entry is a pivot. We use elementary row operations to make the entries below the pivot to be zero.\n",
     "\\begin{equation}\n",
     "\\label{no_pivot}\n",
-    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\ 0 & 0 & -1 & 2 & 1 & c+a \\\\ 0 & 0 & 2 & 10 & 2 & d-3a\\end{array}\\right],\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\ 0 & 0 & -1 & 2 & 1 & c+a \\\\ 0 & 0 & 2 & 4 & 2 & d-3a\\end{array}\\right],\n",
     "\\end{equation}\n",
-    "In [](#no_pivot), the diagonal entry in the second row is zero. Hence, the pivot is the $(2, 3)^{rd}$ entry for the second row. This already is a generalized version of the upper triangular matrix we worked with previously. Continuing our process of making entries below the pivot to be zero, we get\n",
+    "In [](#no_pivot), the second column has no suitable nonzero entry to use as the second pivot, because the 3 in the (1,2) position is already in a row with a pivot, so we move to the 3rd column.  The $(2, 3)$ entry is nonzero, and becomes our second pivot (associated with the second row), which we use to zero out entries below it:\n",
     "\\begin{equation}\n",
-    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\ 0 & 0 & 0 & 0 & 0 & c-\\frac{b}{3}+\\frac{5}{3}a \\\\ 0 & 0 & 0 & 8 & 4 & d + \\frac{2}{3}b-\\frac{13}{3}a\\end{array}\\right].\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\ 0 & 0 & 0 & 0 & 0 & c-\\frac{b}{3}+\\frac{5}{3}a \\\\ 0 & 0 & 0 & 0 & 4 & d + \\frac{2}{3}b-\\frac{13}{3}a\\end{array}\\right].\n",
     "\\end{equation}\n",
-    "After swapping the last two rows, the left-hand matrix in row echelon form is\n",
+    "No suitable pivots are available in column 4 (since rows 1 and 2 already have pivots associated with them), and so the final pivot is the 4 in the fifth column.  We want to put our matrix into row echelon form, so we swap rows 3 and 4 to get\n",
+    "\n",
     "\\begin{equation}\n",
     "\\label{no_pivot_final}\n",
-    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\  0 & 0 & 0 & 8 & 4 & d + \\frac{2}{3}b-\\frac{13}{3}a \\\\ 0 & 0 & 0 & 0 & 0 & c-\\frac{b}{3}+\\frac{5}{3}a \\end{array}\\right].\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\  0 & 0 & 0 & 0 & 4 & d + \\frac{2}{3}b-\\frac{13}{3}a \\\\ 0 & 0 & 0 & 0 & 0 & c-\\frac{b}{3}+\\frac{5}{3}a \\end{array}\\right].\n",
     "\\end{equation}\n",
-    "The three pivots are $1, -3, 8$ at $(1,1), (2, 3), (3, 4)$.\n",
+    "The three pivots are $1$, $-3$, and $4$ at $(1,1)$, $(2, 3)$, and $(3, 4)$.\n",
     "\n",
     "```{warning}\n",
-    "The pivots can only come from the coefficient matrix. Hence, the entries in the last column to the right side of the vertical line cannot be used as pivots since they are the right hand side of the equations.\n",
+    "The entries in the last column to the right of the vertical line cannot be used as pivots.  These are the right hand side of the equation, but pivots can only come from the coefficient matrix.\n",
     "```"
    ]
   },
@@ -170,7 +173,8 @@
    "id": "aebf45f1-aed4-4ba9-be1a-318a2e0dbe4f",
    "metadata": {},
    "source": [
-    "## Rank of a matrix\n",
+    "## Rank of a Matrix\n",
+    "We can now define the _rank_ of a matrix.  For now, this will seem like a strange thing to give a name to, but we'll see later in the class that in addition to the algebraic properties we outline next, it also says a lot about the _geometry of subspaces_ defined by the columns of $A$.\n",
     "\n",
     ":::{prf:definition} Rank\n",
     ":label: rank_defn\n",
@@ -184,7 +188,9 @@
     "2. The only matrix with zero rank is the zero matrix.\n",
     "3. An $n \\times n$ square matrix is nonsingular if and only if it has rank=$n$.\n",
     "4. A matrix always has the same number of pivots even if we perform different row operations to reduce it to row echelon form.\n",
-    "```"
+    "```\n",
+    "\n",
+    "Properties 1-3 are straightforward consequences of the definition of rank.  Property 4 is not as obvious, but we'll come back to it later in the class once we've developed more tools."
    ]
   },
   {
@@ -251,8 +257,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f8f4ab9-9124-4041-804b-3fbe085fc523",
+   "metadata": {},
+   "source": [
+    "#### Python Break!\n",
+    "[SymPy](https://www.sympy.org/en/index.html) is a Python library for performing symbolic mathematics.  We use it below to compute (reduced) row echelon forms of a matrix and see that it allows us to identify the rank of a matrix.  In practice, numerical algebra routines based on the _singular value decomposition_, which we will see in the last third of the class, are used to compute the rank of a matrix: this is implemented by the numpy function `np.linalg.matrix_rank`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2e53951c-0ba2-4873-a398-ebc1392d8972",
    "metadata": {},
    "outputs": [
@@ -298,54 +313,53 @@
    "id": "30ceef13-a480-42d9-aa4d-d10e688ace0d",
    "metadata": {},
    "source": [
-    "## Solving linear systems in row echelon form\n",
+    "## Solving Linear Systems in Row Echelon Form\n",
     "\n",
-    "Suppose we have reduced the system to row echelon form $[U | \\textbf{c}]$, we will now discuss how to solve such a system and the types of solution sets that are possible.\n",
+    "Suppose we have reduced the system to row echelon form $[U | \\textbf{c}]$, corresponding to the linear system $U\\vv x = \\vv c$.  We will now discuss how to solve such a system, and the types of solution sets that are possible.\n",
     "\n",
-    "### No solution\n",
+    "### No Solution\n",
     "\n",
-    "First, we will check for _inconsistent equations_. For example, if the $i^{th}$ row of $U$ is all zeros, but the corresponding entry $c_i \\neq 0$, then this would represent $0 = c_i \\neq 0$. This case corresponds to when $A \\textbf{x} = \\textbf{b}$ has _no solution_, also called _incompatible_. In [](#no_pivot_final), the last row is all zeros. Hence, the system [](#no_pivot_sys) has no solution if $c-\\frac{b}{3}+\\frac{5}{3}a \\neq 0$. If there are no such inconsistencies, the system has one or more solutions and we will see how to solve such _compatible linear systems_. \n",
+    "First, we check for _inconsistent equations_. For example, if the $i^{th}$ row of $U$ is all zeros, but the corresponding entry $c_i \\neq 0$, then this would represent $0 = c_i \\neq 0$. This case corresponds to when $A \\textbf{x} = \\textbf{b}$ has _no solution_, also called _incompatible_. For example, in our previous example [](#no_pivot_final) the last row is all zeros, and therefore the system [](#no_pivot_sys) has no solution if $c-\\frac{b}{3}+\\frac{5}{3}a \\neq 0$. If there are no such inconsistencies, the linear system is _compatible_, and has one or more solutions.  Let's see how to solve such _compatible linear systems_. \n",
     "\n",
-    "### Compatible linear systems\n",
+    "### Compatible Linear Systems\n",
     "\n",
     "To find the solutions to compatible linear systems, we first split the variables into two separate classes.\n",
     "\n",
     ":::{prf:definition}\n",
     ":label: free_basic_defn\n",
     "In a linear system $U \\textbf{x} = \\textbf{c}$ in row echelon form, \n",
-    "1. the variables corresponding to columns containing a pivot are called _basic variables_, while \n",
+    "1. the variables corresponding to columns containing a pivot are called _basic variables_, and\n",
     "2. the variables corresponding to the columns without a pivot are called _free variables_.\n",
     ":::\n",
     "\n",
-    "We use back substitution to solve $U \\textbf{x} = \\textbf{c}$, but our goal is to express the basic variables as a function of the free variables. We use our previous example to illustrate this procedure by setting $a = 1, b = 2, c=1, d=2$:\n",
+    "As before, we use back substitution to solve $U \\textbf{x} = \\textbf{c}$, but our goal is now to express the basic variables as a function of the free variables. We use our previous example to illustrate this procedure.  Let's fix a right hand side by setting $a = 0, b = 3, c=1, d=1$:\n",
     "\\begin{equation}\n",
     "\\label{basic_free}\n",
-    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & 1 \\\\ 0 & 0 & -3 & 6 & 3 & 0 \\\\  0 & 0 & 0 & 8 & 4 & -1 \\\\ 0 & 0 & 0 & 0 & 0 & 0 \\end{array}\\right].\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & 0 \\\\ 0 & 0 & -3 & 6 & 3 & 3 \\\\  0 & 0 & 0 & 0 & 4 & 3 \\\\ 0 & 0 & 0 & 0 & 0 & 0 \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
-    "Let us denote the variables as $(x, y, z, u, v)$. From [](#basic_free), $\\color{red}{(x, z, u)}$ are basic variables, while $\\color{green}{(y, v)}$ are free variables. We need to solve the reduced system\n",
+    "Let us denote the variables as $(x, y, z, u, v)$. Following [](#basic_free), $\\color{red}{(x, z, v)}$ are basic variables, while $\\color{green}{(y, u)}$ are free variables. We first need to solve the reduced system\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{basic_free_sys}\n",
-    "\\color{red}{x}+\\color{green}{3y}+\\color{red}{2z}-\\color{red}{u} &= 1, \\\\\n",
-    "-\\color{red}{3z} + \\color{red}{6u} + \\color{green}{3v} &= 0, \\\\\n",
-    "\\color{red}{8u} + \\color{green}{4v} &= -1\n",
+    "\\color{red}{x}+\\color{green}{3y}+\\color{red}{2z}-\\color{green}{u} &= 0, \\\\\n",
+    "-\\color{red}{3z} + \\color{green}{6u} + \\color{red}{3v} &= 3, \\\\\n",
+    "\\color{red}{4v} &= 3 \\\\\n",
+    "0 &= 0,\n",
     "\\end{equation}\n",
-    "Rearranging [](#basic_free_sys) starting from the last equation to express the basic variables as a function of the free variables:\n",
+    "for the basic variables $\\color{red}{(x, z, v)}$ in terms of the free variables $\\color{green}{(y, u)}$. Back Substitution combined with a bit of algebra  gives us the following _general solution_\n",
     "\\begin{equation}\n",
     "\\label{basic_fn_free}\n",
-    "u &= -\\frac{1}{8} - \\frac{v}{2}, \\\\\n",
-    "z &= v -\\frac{1}{4} - v = -\\frac{1}{4}, \\\\\n",
-    "x &= \\frac{11}{8} - 3y - \\frac{v}{2}.\n",
+    "v=\\frac{3}{4}, \\ z = -1 + 2u + v = -\\frac{1}{4} + 2u, \\ x = -3y - 2z + u = \\frac{1}{2}-3y-3u.\n",
     "\\end{equation}\n",
-    "As the name suggests, we are free to chose any values for the free variables $\\color{green}{(y, v)}$ and the basic variables should satisfy [](#basic_fn_free). One possible solution for [](#no_pivot_sys) is $x = 1, y=\\frac{1}{8}, z=-\\frac{1}{4}, u =-\\frac{1}{8}, v = 0$.\n",
+    "As the name suggests, we are free to chose any values for the free variables $\\color{green}{(y, u)}$: any resulting solution will satisfy [](#basic_fn_free). One possible solution for [](#no_pivot_sys) is obtained by setting $y=y=0$ so that $x = \\frac{1}{2},\\, y=0,\\, z=-\\frac{1}{4},\\, u =0,\\, v = \\frac{3}{4}$.\n",
     "\n",
-    "```{note}\n",
+    "### General Properties\n",
     "1. In general, for an $m \\times n$ system ($m$ equations and $n$ unknowns) of rank $r$, there are $r$ basic variables and $m - r$ free variables.\n",
     "2. There are $m - r$ all zero rows in the row echelon form of the linear system. The system is compatible if and only if the corresponding right-hand vector entries $c_i$ are zero.\n",
-    "```\n",
     "\n",
-    "In summary, our conclusion is given below.\n",
+    "\n",
+    "Our discussion is summarized in the following theorem.\n",
     "```{prf:theorem}\n",
     ":label: solution_set\n",
     "A system $A \\textbf{x} = \\textbf{b}$ of $m$ linear equations in $n$ unknowns has either\n",
@@ -497,7 +511,7 @@
     ":align: center\n",
     ":::\n",
     "\n",
-    "Having primarily taken the algebric route so far to discuss linear systems, this brief geometric perspective will serve as an introduction to delve deep into other concepts in subsequent lectures that has strong geometric conncetions. "
+    "This ends our initial exploration of solutions to systems of linear equations.  Our story so far has been almost entirely _algebraic_ in nature.  However, the power and beauty of linear algebra is that it allows us to turn algebraic questions such as \"Does $A\\vv x = \\vv b$ have a solution?\" into geometric ones like \"Do the planes defined by equations [](#three) intersect?\"  In the next lectures, we will explore this geometric perspective, and see that it allows us to unlock some incredibly powerful tools."
    ]
   },
   {
